Upto sept22 added

--- a/UserInputControlesTest/app/src/main/res/values/strings.xml
+++ b/UserInputControlesTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">UserInputControlesTest</string>
+
+    <string-array name="branch">
+        <item>CSE</item>
+        <item>ECE</item>
+        <item>EEE</item>
+        <item>CIVIL</item>
+    </string-array>
 </resources>
